Criando e Configurando o Projeto

--- a/casadocodigo/src/main/webapp/livros/form.xhtml
+++ b/casadocodigo/src/main/webapp/livros/form.xhtml
@@ -13,7 +13,8 @@
 	</div>
 	<div>
 		<h:outputLabel value="Descrição" />
-		<h:inputTextarea rows="4" cols="20" value="#{adminLivrosBean.livro.descricao}" />
+		<h:inputTextarea rows="4" cols="20"
+			value="#{adminLivrosBean.livro.descricao}" />
 	</div>
 	<div>
 		<h:outputLabel value="Numero de Paginas" />
@@ -23,6 +24,15 @@
 		<h:outputLabel value="Preço" />
 		<h:inputText value="#{adminLivrosBean.livro.titulo}" />
 	</div>
+	<div>
+		<h:outputLabel value="Autores" />
+		<h:selectManyListbox value="#{adminLivrosBean.autoresId}">
+			<f:selectItems value="#{adminLivrosBean.autores}" var="autor"
+				itemValue="#{autor.id}" itemLabel="#{autor.nome}"></f:selectItems>
+
+		</h:selectManyListbox>
+	</div>
+
 	<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" />
 
 </h:form>
