--- a/casadocodigo/src/main/webapp/livros/form.xhtml
+++ b/casadocodigo/src/main/webapp/livros/form.xhtml
@@ -2,39 +2,51 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<h:form>
-	<div>
-		<h:outputLabel value="Titulo" />
-		<h:inputText value="#{adminLivrosBean.livro.titulo}" />
-	</div>
-	<div>
-		<h:outputLabel value="Descrição" />
-		<h:inputTextarea rows="4" cols="20"
-			value="#{adminLivrosBean.livro.descricao}" />
-	</div>
-	<div>
-		<h:outputLabel value="Numero de Paginas" />
-		<h:inputText value="#{adminLivrosBean.livro.nrPaginas}" />
-	</div>
-	<div>
-		<h:outputLabel value="Preço" />
-		<h:inputText value="#{adminLivrosBean.livro.titulo}" />
-	</div>
-	<div>
-		<h:outputLabel value="Autores" />
-		<h:selectManyListbox value="#{adminLivrosBean.autoresId}">
-			<f:selectItems value="#{adminLivrosBean.autores}" var="autor"
-				itemValue="#{autor.id}" itemLabel="#{autor.nome}"></f:selectItems>
-
-		</h:selectManyListbox>
-	</div>
-
-	<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" />
-
-</h:form>
+	<h:form>
+		<div>
+			<h:outputLabel value="Título" />
+			<h:inputText value="#{adminLivrosBean.livro.titulo}"
+				required="true" id="titulo" />
+			<h:message for="titulo" />
+		</div>
+		<div>
+			<h:outputLabel value="Descrição"/>
+			<h:inputTextarea rows="4" cols="20"
+				required="true" value="#{adminLivrosBean.livro.descricao}"
+				id="descricao" />
+			<h:message for="descricao" />
+		</div>
+		<div>
+			<h:outputLabel value="Número de Páginas"/>
+			<h:inputText value="#{adminLivrosBean.livro.nrPaginas}" 
+				required="true" id="nrPaginas" />
+			<h:message for="nrPaginas" />
+		</div>
+		<div>
+			<h:outputLabel value="Preço"/>
+			<h:inputText value="#{adminLivrosBean.livro.preco}" 
+				required="true" id="preco" />
+			<h:message for="preco" />
+		</div>
+		<div>
+			<h:outputLabel value="Autores" />
+			<h:selectManyListbox	 value="#{adminLivrosBean.autoresId}"
+					id="autores">
+				<f:selectItems value="#{adminLivrosBean.autores}"
+					var="autor"
+					itemValue="#{autor.id}" itemLabel="#{autor.nome}" />
+			</h:selectManyListbox>
+			<h:message for="autores" />
+		</div>
+		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" />
+	</h:form>
 
 </html>
+
+
+
+
+
